# reading-list

./: .dockerignore  .gitignore  Dockerfile  README.md  build-static.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  docker.yml
reading_list/: config.py  main.py
reading_list/cli/: commands.py
reading_list/db/: database.py  migrations.py
reading_list/fetcher/: extractor.py  http_client.py
reading_list/models/: entry.py
reading_list/services/: fetch_service.py  list_service.py
reading_list/web/: app.py  routes.py
specs/001-reading-list-viewer/: spec.md
specs/002-add-url-fetch/: spec.md  tasks.md
specs/002-url-fetcher/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-fallback-headline-extractor/: spec.md
specs/004-fallback-extractor-reader-display/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/005-add-dark-mode/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: config.ts
src/cli/: index.ts
src/db/: index.ts
src/models/: entry.ts  note.ts
src/server/: app.ts  index.ts  routes.ts
src/services/: entry.service.ts  export.service.ts  fetch.service.ts  note.service.ts
src/shared/: utils.ts
static/: app.js  app.ts  style.css  tsconfig.json
templates/: add.njk  base.njk  index.njk
tests/contract/: notes-api.test.ts  tags-api.test.ts  unread-filter.test.ts
tests/integration/: notes.test.ts  tags.test.ts  unread-filter.test.ts
tests/unit/: export.service.test.ts
(+19 files in other folders)
