[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reading-list"
version = "0.1.0"
description = "A local reading list viewer and URL fetcher"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "httpx>=0.27",
    "trafilatura>=2.0",
    "typer>=0.12",
]

[project.scripts]
reading-list = "reading_list.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["reading_list"]
